<resources>
    <string name="app_version">0.6.1-alpha</string>
    <string name="releaseNotesIntroTitle">Release 0.6.1-alpha</string>
    <string name="releaseNotesIntroDescription"><![CDATA[Gute Neuigkeiten! Es gibt ein neues Release. Die aktuellen Änderungen findest du unter \n https://sites.google.com/view/wishlist-releasenotes/releasenotes \n oder im Einstellungsmenü —> \n Allgemein —> Releasenotes. \n\n Viel Spaß beim Benutzen der App. \n\n\n Hinweis: Um die App stetig verbessern zu können bin ich auf dein Feedback angewiesen. Dafür kannst du direkt im App-Store eine Rezension oder eine E-Mail an aromkoapps@gmail.com schreiben.]]></string>
    <string name="app_name">Wishlist</string>
    <string name="txtSend">Senden</string>
    <string name="txtAdd">Hinzufügen</string>
    <string name="txtDelete">Löschen</string>
    <string name="txtNoWishFound">Keine Wünsche gefunden.</string>
    <string name="txtName">Name</string>
    <string name="txtEmail">E-Mail</string>
    <string name="txtSave">Speichern</string>
    <string name="txtTitle">Titel</string>
    <string name="txtPriceInEuro">Preis in €</string>
    <string name="txtUrl">Url</string>
    <string name="txtDescription">Beschreibung</string>
    <string name="txtWishstrength">Wunschstärke</string>
    <string name="txtChooseAPlace">Wähle einen Ort.</string>
    <string name="txtCreateNewWishlist">Neue Wunschliste erstellen</string>
    <string name="txtNameOfTheList">Name der Liste</string>
    <string name="txtDeleteWish">Wunsch löschen</string>
    <string name="txtYouWouldLikeToDeleteTheWish">Möchten Sie wirklich den Wunsch löschen?</string>
    <string name="txtDeleteWishlist">Wunschliste löschen</string>
    <string name="txtWouldYouLikeToDeleteTheWishlist">Möchten Sie wirklich die Wunschliste löschen?</string>
    <string name="txtEditWishlist">Wunschliste editieren</string>
    <string name="txtPartialPayment">Anteilig schenken</string>
    <string name="txtAmount">Betrag</string>
    <string name="txtChooseAnImage">Wähle ein Bild aus</string>
    <string name="txtTakePhoto">Foto aufnehmen</string>
    <string name="txtChooseFromGallery">Aus Album wählen</string>
    <string name="txtEnterLinkToThePicture">Link zum Bild angeben</string>
    <string name="txtDownloadImage">Bild herunterladen</string>
    <string name="txtNameAnonym">Anonym</string>
    <string name="txtEmailAnonym" translatable="false">anonym@anonym.com</string>
    <string name="txtPayment">Schenken</string>
    <string name="txtEdit">Editieren</string>
    <string name="txtProfile">Profil</string>
    <string name="txtSettings">Einstellungen</string>
    <string name="txtLogout">Abmelden</string>
    <string name="txtFavoriteId">Favoriten-Id</string>
    <string name="txtNotEditable">nicht änderbar</string>
    <string name="txtGeneral">Allgemein</string>
    <string name="txtNotifications">Benachrichtigungen</string>
    <string name="txtWishlistNotifications">Wunschlistenbenachrichtigungen</string>
    <string name="txtFavoriteNotifications">Favoritenbenachrichtigungen</string>
    <string name="txtChatNotifications">Kommentarbenachrichtigungen</string>
    <string name="txtMessages">Nachrichten</string>
    <string name="txtEditWish">Wunsch bearbeiten</string>
    <string name="txtNoPlaceFound">Es wurde kein Standort angegeben.</string>
    <string name="txtImageChanged" translatable="false">imageChanged</string>
    <string name="txtImageDeleted" translatable="false">imageDeleted</string>
    <string name="txtSuccessfulChangedWish">Wunsch wurde erfolgreich geändert.</string>
    <string name="txtGoogleSignInFailed">Google Anmeldung fehlgeschlagen.</string>
    <string name="txtAuthenticationFailed">Authentifizierung fehlgeschlagen.</string>
    <string name="txtNoInvitationFound">Die Einladung konnte nicht zugeordnet werden.</string>
    <string name="txtOk">OK</string>
    <string name="txtCancel">Abbrechen</string>
    <string name="txtInvitationMessage">Hey, ich möchte meine Liste mit dir teilen. Klicke auf folgenden Link, um ihr beizutreten:</string>
    <string name="txtFavoritelistCantBeDeleted">Die Favoritenliste kann nicht gelöscht werden.</string>
    <string name="txtEditProfile">Profil bearbeiten</string>
    <string name="txtAddWish">Wunsch hinzufügen</string>
    <string name="txtWishSuccessfulAdded">Wunsch wurde erfolgreich hinzugefügt.</string>
    <string name="txtNoUrlFound">Es wurde keine Url angegeben.</string>
    <string name="txtIsFavorite" translatable="false">isFavorite</string>
    <string name="txtIsNoFavorite" translatable="false">isNoFavorite</string>
    <string name="txtUnknownError">Unbekannter Fehler.</string>
    <string name="txtSuccessfulSave">Speichern erfolgreich.</string>
    <string name="title_activity_wish" translatable="false">WishActivity</string>
    <string name="title_activity_profil" translatable="false">ProfilActivity</string>
    <string name="title_activity_edit_wish" translatable="false">EditWishActivity</string>
    <string name="title_activity_chat" translatable="false">ChatActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="txtInvitationLinkCouldNotBeCreated">Einladungslink konnte nicht generiert werden.</string>
    <string name="txtObjectNotFound">Objekt wurde nicht gefunden.</string>
    <string name="txtLogin">Weiter mit Google</string>
    <string name="txtNoImageSourceFound">Es konnte kein Bildinhalt gefunden werden. Bitte geben Sie URLs mit der Endung .jpg, .gif, .png oder .jpeg an.</string>
    <string name="txtTextFromIntent">Lege einen neuen Wunsch an, um den Text zu übernehmen.</string>
    <string name="txtPictureSuccesfulUploaded">Das Bild wurde erfolgreich hochgeladen.</string>
    <string name="txtPictureNotSuccesfulUploaded">Das Bild konnte nicht hochgeladen werden.</string>
    <string name="txtGetPermissions">Um wichtige Funktionen der App nutzen zu können müssen Sie den dafür erforderlichen Berechtigungen zustimmen.</string>
    <string name="txtHaveFunWithTheApp">Viel Spaß beim Benutzen der App.</string>
    <string name="txtPermissionDenied">Berechtigung verweigert.</string>
    <string name="txtUserIcon">Benutzersymbol</string>
    <string name="txtExampleTitle" translatable="false">Samsung S7</string>
    <string name="txtExamplePrice" translatable="false">100 €</string>
    <string name="txtProductImage">Produktbild</string>
    <string name="txtWishstrengthIcon">Wunschstärke</string>
    <string name="txtExmapleUserCounter" translatable="false">10</string>
    <string name="txtExampleMapIcon">Kartensymbol</string>
    <string name="txtExampleUrlIcon">Urlsymbol</string>
    <string name="txtExampleChatIcon">Chaticon</string>
    <string name="txtExampleFavoriteIcon">Favoriteicon</string>
    <string name="txtMenue" translatable="false">⋮</string>
    <string name="txtErrorPlaces">Hier ist ein fehler aufgetreten:</string>
    <string name="invalid_title">Bitte geben sie einen Titel ein.</string>
    <string name="invalid_url">Bitte geben Sie eine gültige URL ein.</string>
    <string name="invalid_price">Bitte geben Sie einen gültigen Preis mit max. 2  Nachkommastellen ein.</string>
    <string name="txtVersion">Version</string>
    <string name="list_already_deleted">Diese Wunschliste wurde bereits gelöscht.</string>
    <string name="appIntroWelcome">Herzlich Willkommen zur Wishlist</string>
    <string name="appIntroWelceomDesc">Nachfolgend werden dir die wichtigsten Funktionen der App vorgestellt.</string>
    <string name="appIntroFavoriteDesc">Mit diesem Symbol kannst du die wichtigsten Wünsche kennzeichnen. Diese landen dann automatisch in deiner Favoritenliste. Zudem wird dir angezeigt, wie viele Freunde diesen Wunsch als Favorit markiert haben.</string>
    <string name="appIntroShareDesc">Teile deine Wünsche mit deinen Freunden. Schicke ihnen mit diesem Symbol einen Link und schon können sie die Liste auch benutzen. Zudem wird dir angezeigt wie viele Freunde die Liste nutzen.</string>
    <string name="appIntroPermission">Berechtigungen für die App</string>
    <string name="appIntroPermissionDesc">Damit du die App in vollen Zügen genießen kannst, werden ein paar Berechtigungen benötigt. Stimmst du diesen nicht zu, können nicht alle Funktionen der App genutzt werden. Die Berechtigungen kannst du aber auch nachträglich über die Einstellungen deines Endgeräts verändern.</string>
    <string name="appIntroNavigationDesc">Zu jedem Wunsch kannst du Standortdaten hinterlegen, z.B ein Geschäft, in dem das Produkt zu kaufen ist. Mit einem Klick auf das Kartensymbol wird dann automatisch die Navigation gestartet. Wishlist speichert deine Standortdaten nicht und gibt diese nur an die Navigationsapp weiter.</string>
    <string name="appIntroPhotoDesc">Zu jedem Wunsch kannst du ein Foto hinzufügen, direkt mit der Kamera, aus der Galerie oder dem Internet. Damit dies möglich ist, wird Zugriff auf deine Kamera benötigt, sowie Schreib- und Leserechte auf deinen Speicher.</string>
    <string name="appIntroEnding">Viel Spaß beim Benutzen der App!</string>
    <string name="no_share_suppot">Teilen wird nicht unterstützt? Dann sende mir eine Nachricht und schreib mir um welche App es sich handelt. Vielleicht kommt sie dann in Zukunft dazu :-)</string>
    <string name="txtGeneralDescription">Hier findest du allgemeine Informationen</string>
    <string name="txtNotificationsDescription">Konfiguriere deine Benachrichtiungen</string>
    <string name="notifications_wishlist_active_title">Benachr. für Wunschlisten</string>
    <string name="notifications_wishlist_active_description">Erhalte Benachrichtungen für alle Wunschlisten, wenn z.B. neue Wünsche angelegt wurden</string>
    <string name="notifications_chat_messages_active_title">Benachr. für Chats</string>
    <string name="notifications_chat_messages_active_description">Erhalte Benachrichtungen, sobald neue Nachrichten in den Chats vorhanden sind</string>
    <string name="notifications_wishlist_title">Hey. Es gibt neue Aktivitäten in einer Wunschliste.</string>
    <string name="notifications_wishlist_description_new">Es wurde ein neuer Wunsch in die Liste XXX hinzugefügt. Klicke hier, um direkt in die Liste zu gelangen.</string>
    <string name="notifications_wishlist_description_delete">Es wurde ein Wunsch aus der Liste XXX entfernt. Klicke hier, um direkt in die Liste zu gelangen.</string>
    <string name="notifications_chat_title">Hey. Es gibt eine neue Nachricht in einer Wunschliste.</string>
    <string name="notifications_chat_description_new">Es wurde ein neuer Nachricht bei XXX hinzugefügt. Klicke hier, um direkt in die Liste zu gelangen.</string>
    <string name="txtInviteFriends">Freunde einladen</string>
    <string name="txtGivesAway">Verschenkt</string>
    <string name="txtShowAdditionalInfos">Weitere Infos anzeigen</string>
    <string name="txtNoNavigationAppFound">Leider befindet sich keine Navigationsapp auf Ihrem Handy oder ist deaktiviert.</string>
    <string name="txtGiveAwayNotPossible">Wunsch wurde bereits verschenkt.</string>
    <string name="txtLoginDescription">Wunschlisten immer und überall in Echtzeit.</string>
    <string name="txtLogo">Logo</string>
    <string name="general_releasenotes">Hier kannst du alle Neuerungen nachlesen.</string>
    <string name="general_app_intro">Lerne die wichtigsten Funktionen kennen.</string>
    <string name="general_link_to_releasenotes">https://sites.google.com/view/wishlist-releasenotes/releasenotes</string>
</resources>
