<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="notifications_wishlist_active_category"
        app:title="@string/txtWishlistNotifications">

        <SwitchPreference
            app:defaultValue="false"
            app:key="notifications_wishlist_active"
            app:title="@string/notifications_wishlist_active_title"
            app:summary="@string/notifications_wishlist_active_description" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="notifications_chat_messages_active_category"
        app:title="@string/txtChatNotifications">

        <SwitchPreference
            app:defaultValue="false"
            app:key="notifications_chat_messages_active"
            app:title="@string/notifications_chat_messages_active_title"
            app:summary="@string/notifications_chat_messages_active_description" />
    </PreferenceCategory>
</PreferenceScreen>
