<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_invitePeople"
        android:icon="@drawable/ic_person_add_white"
        android:orderInCategory="100"
        android:title="Invite People"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/txtProfile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/txtSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/txtLogout"
        app:showAsAction="never" />
</menu>
